try to fix image spacing on mobile

--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -119,7 +119,7 @@ ul li:hover ul.cat-dropdown {
   height: fit-content;
 }
 
-#ica {
+#tica {
   display: flex;
   justify-content: space-evenly;
   align-self: center;
@@ -236,7 +236,8 @@ ul li:hover ul.cat-dropdown {
     align-self: center;
     flex-direction: column;
     background-color: #F2F1F3;
-    justify-content: space-evenly;
+    justify-content: space-around;
+    padding: 3rem;
   }
 
   li a {
@@ -306,14 +307,16 @@ ul li:hover ul.cat-dropdown {
     display: flex;
     justify-content: space-evenly;
     align-self: center;
-    height: 3vh;
+    height: 4vh;
+    width: auto;
   }
   
-  #ica {
+  #tica {
     display: flex;
     justify-content: space-evenly;
     align-self: center;
-    height: 5vh;
+    height: 3vh;
+    width: auto;
   }
   
   #cff {
@@ -321,5 +324,6 @@ ul li:hover ul.cat-dropdown {
     justify-content: space-evenly;
     align-self: center;
     height: 3vh;
+    width: auto;
   }
 }
